Adding ability to view github organization views

--- a/public/views/groupView.html
+++ b/public/views/groupView.html
@@ -1,4 +1,4 @@
-<md-content  od-groups groups="octoService.organizations.RefactorU"
+<md-content  od-groups groups="octoService.organizations[selectGroup]"
 
 class="md-padding" layout-align="center center">  
 </md-content>
