--- a/public/views/odReadme.html
+++ b/public/views/odReadme.html
@@ -23,9 +23,9 @@
 <ul>
 <li>[ ] add css to od-readme directive </li>
 <li>[ ] Add Repo Project View</li>
-<li>[ ] Upload Image to Node server</li>
-<li>[ ] Add Organization/Group  View</li>
-<li>[ ] Use Ng-file Upload</li>
+<li>[x] Upload Image to Node server</li>
+<li>[x] Add Organization/Group  View</li>
+<li>[x] Use Ng-file Upload</li>
 <li>[ ] BUG: If POST timeout css color wont change </li>
 <li>[ ] Fix: &quot;UPDATE PROFILE&quot; button showing up everywhere </li>
 <li>[ ] Show random OctoDex Users at home page. </li>
