--- a/public/views/odSidenav.html
+++ b/public/views/odSidenav.html
@@ -84,9 +84,22 @@
 			Tech Friends
 			<md-divider></md-divider>
 		</md-button>
-
-		<md-button ng-click="::toggleSidenav('right')" flex="100" ng-disabled="::true">
-			Popular Repos
+		<md-button ng-click="::toggleSidenav('right')" flex="100" ng-href="#groups/angular" >
+			Angular.js Members
+			<md-divider></md-divider>
+		</md-button>
+		<md-button ng-click="::toggleSidenav('right')" flex="100" ng-href="#groups/reactjs" >
+			Reactjs Members
+			<md-divider></md-divider>
+		</md-button>
+		<md-button ng-click="::toggleSidenav('right')" flex="100" ng-href="#groups/nodejs" >
+			Node.js Members
+		</md-button>
+		<md-button ng-click="::toggleSidenav('right')" flex="100" ng-href="#groups/github" >
+			Github Members
+		</md-button>
+		<md-button ng-click="::toggleSidenav('right')" flex="100" ng-href="#groups/Emberjs" >
+			Ember.js Members
 		</md-button>
 
 	</md-list>
