--- a/public/views/odWelcome.html
+++ b/public/views/odWelcome.html
@@ -5,6 +5,6 @@
   <h1>Welcome to octoDex!</h1> 
   <h1>An online vitual profile for Github Users</h1> 
   <md-button class="md-raised md-primary" ng-click="logger()">
-    {{od.signInBtn}}
+    {{od.signInBtnTxt}}
   </md-button>
 </md-content>
