--- a/public/views/odCard.html
+++ b/public/views/odCard.html
@@ -1,8 +1,8 @@
 <md-card layout="column" class="my-container md-whiteframe-5dp" >
-	<div layout layout-align="center center" ng-if="!user">
+	<div layout layout-align="center center" ng-if="!user.name">
 		<md-progress-circular md-mode="indeterminate" md-diameter="96"></md-progress-circular>
 	</div>
-	<div ng-if="user">
+	<div ng-if="user.name">
 			
 		<div layout="column" layout-gt-xs="row"  class="card-header">
 			<div flex-xs="100" flex-sm="50" flex-gt-sm="33" >
