Using webpack now still not perfect

--- a/public/views/index.html
+++ b/public/views/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html ng-app="octodex">
 	<head>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.9/angular.min.js"></script>
+		<script src="/js/bundle.js" type="text/javascript" charset="utf-8"></script>
+		<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.9/angular.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.9/angular-animate.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.9/angular-aria.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.9/angular-route.min.js"></script>
@@ -9,7 +10,7 @@
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/angular-material/1.0.4/angular-material.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.3.0/lodash.min.js" type="text/javascript"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/danialfarid-angular-file-upload/12.0.1/ng-file-upload.min.js"></script>
-
+ -->
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/angular-material/1.0.4/angular-material.min.css">
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
@@ -48,14 +49,14 @@
 			</md-content> 
 		</div>
 		<div>
-			<script src="/js/octoModule.js" type="text/javascript" charset="utf-8"></script>
-			<script src="/js/octoService.js" type="text/javascript" charset="utf-8"></script>
+			<!-- <script src="/js/octoModule.js" type="text/javascript" charset="utf-8"></script> -->
+			<!-- <script src="/js/octoService.js" type="text/javascript" charset="utf-8"></script>
 			<script src="/js/inlineDirective.js" type="text/javascript" charset="utf-8"></script>
 			<script src="/js/octoDirectives.js" type="text/javascript" charset="utf-8"></script>
 			<script src="/js/groupController.js" type="text/javascript" charset="utf-8"></script>
 			<script src="/js/indexController.js" type="text/javascript" charset="utf-8"></script>
 			<script src="/js/myProfileController.js" type="text/javascript" charset="utf-8"></script>
-			<script src="/js/otherProfileController.js" type="text/javascript" charset="utf-8"></script>
+			<script src="/js/otherProfileController.js" type="text/javascript" charset="utf-8"></script> -->
 		</div>
 	</body>
 </html>
