maxcdn.bootstrapcdn is slow.

--- a/public/views/index.html
+++ b/public/views/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html ng-app="octodex">
 	<head>
-		<script src="/js/bundle.js" type="text/javascript" charset="utf-8"></script>
-		<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.9/angular.min.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.9/angular.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.9/angular-animate.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.9/angular-aria.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.9/angular-route.min.js"></script>
@@ -10,10 +9,10 @@
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/angular-material/1.0.4/angular-material.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.3.0/lodash.min.js" type="text/javascript"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/danialfarid-angular-file-upload/12.0.1/ng-file-upload.min.js"></script>
- -->
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.6/css/bootstrap.min.css">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/angular-material/1.0.4/angular-material.min.css">
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.5.0/css/font-awesome.min.css">
 		<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
 		<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimal-ui" />
@@ -36,28 +35,13 @@
 				</md-toolbar>
 			
 				<md-content>
-					<!-- <ng-view flex ></ng-view> -->
 					<div flex>
 						<ng-view ></ng-view>
 					</div>
-					<!-- <md-content  od-groups groups="octoService.organizations.RefactorU"
-					ng-if="!octoService.client.isLoggedIn &&  isAtHome"
-					class="md-padding" layout-align="center center">	
-					</md-content> -->
 				</md-content>
-
 			</md-content> 
 		</div>
-		<div>
-			<!-- <script src="/js/octoModule.js" type="text/javascript" charset="utf-8"></script> -->
-			<!-- <script src="/js/octoService.js" type="text/javascript" charset="utf-8"></script>
-			<script src="/js/inlineDirective.js" type="text/javascript" charset="utf-8"></script>
-			<script src="/js/octoDirectives.js" type="text/javascript" charset="utf-8"></script>
-			<script src="/js/groupController.js" type="text/javascript" charset="utf-8"></script>
-			<script src="/js/indexController.js" type="text/javascript" charset="utf-8"></script>
-			<script src="/js/myProfileController.js" type="text/javascript" charset="utf-8"></script>
-			<script src="/js/otherProfileController.js" type="text/javascript" charset="utf-8"></script> -->
-		</div>
+		<script src="/js/bundle.js" type="text/javascript" charset="utf-8"></script>
 	</body>
 </html>
 
