renaming octoservice to od

--- a/public/views/groupView.html
+++ b/public/views/groupView.html
@@ -1,4 +1,4 @@
-<md-content  od-groups groups="octoService.organizations[selectGroup]"
+<md-content  od-groups groups="od.organizations[selectGroup]"
 
 class="md-padding" layout-align="center center">  
 </md-content>
