--- a/public/views/odCard.html
+++ b/public/views/odCard.html
@@ -60,9 +60,9 @@
 
 		<md-card-actions layout="row" layout-align="end center">
 			<span flex></span>
-			<md-button ng-show="octoService.showSaveBtn" 
+			<md-button ng-show="od.showSaveBtn" 
 				class="md-warn md-raised" 
-				ng-click="octoService.updateClient()"
+				ng-click="od.updateClient()"
 				aria-label="save button">
 				Update Profile
 			</md-button>
