--- a/public/views/odWelcome.html
+++ b/public/views/odWelcome.html
@@ -2,8 +2,8 @@
   layout-padding layout="column" 
   
   layout-align="start center">
-  <h1>Welcome to octoDex!</h1> 
-  <h1>An online vitual profile for Github Users</h1> 
+  <h1>Welcome to OctoDex!</h1> 
+  <h2>Easily share contact information with your Github account</h2>
   <md-button class="md-raised md-primary" ng-click="logger()">
     {{od.signInBtnTxt}}
   </md-button>
